tests/bad_programs/type_errors/same_name_in_scopes.notc
int give_me_int(int num) {
    return num;
}

int main() {
    int i = 10;
    {
        double i = 20.0;
    give_me_int(i);
    }
    double f = 3.4;
    return 0;
}
